// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBar Basic display 1`] = `
.c3 {
  color: black;
  cursor: pointer;
  color: black;
  font: sans-serif;
  font-size: 18px;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  -webkit-transition: 1s ease;
  transition: 1s ease;
}

.c3:hover,
.c3:focus,
.c3:active {
  background: none;
  color: black;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: calc(8px * 6);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  margin: calc(8px * 2) 1rem calc(8px * 2) 1rem;
}

.c4 > * {
  height: calc(8px * 6);
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: calc(8px * 3) 1rem calc(8px * 3) 0;
}

<nav
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      <a
        className="c3 c4"
        href="/"
        onClick={[Function]}
      >
        some brand
      </a>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c5"
    >
      <a
        className="c3"
        href="/login"
        onClick={[Function]}
      >
        Login
      </a>
    </span>
  </div>
</nav>
`;

exports[`AppBar With admin user 1`] = `
.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: calc(8px / 2);
}

.c6 svg {
  stroke: black;
  width: calc(2 * 8px);
  height: calc(2 * 8px);
}

.c7 {
  background: grey;
  border: 1px solid grey;
  border-radius: 8px;
  color: black;
  font-family: sans-serif;
  font-size: 18px;
  line-height: calc(8px * 3);
  min-width: calc(8px * 12);
  padding: 8px;
  background: none;
  border: none;
  min-width: 0;
  padding: 0;
  color: black;
  font: sans-serif;
  font-size: 18px;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  -webkit-transition: 1s ease;
  transition: 1s ease;
}

.c7:focus,
.c7:hover {
  background-color: hsl(0,0%,35.1%);
  -webkit-transition: 1s ease;
  transition: 1s ease;
}

.c7:active {
  background-color: hsl(0,0%,25.1%);
}

.c7[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.c7[disabled]:focus,
.c7[disabled]:hover,
.c7[disabled]:active {
  background: grey;
}

.c7:hover,
.c7:focus,
.c7:active {
  background: none;
  color: black;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 {
  color: black;
  cursor: pointer;
  color: black;
  font: sans-serif;
  font-size: 18px;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  -webkit-transition: 1s ease;
  transition: 1s ease;
}

.c3:hover,
.c3:focus,
.c3:active {
  background: none;
  color: black;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: calc(8px * 6);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  margin: calc(8px * 2) 1rem calc(8px * 2) 1rem;
}

.c4 > * {
  height: calc(8px * 6);
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: calc(8px * 3) 1rem calc(8px * 3) 0;
}

<nav
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      <a
        className="c3 c4"
        href="/"
        onClick={[Function]}
      >
        some brand
      </a>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c5"
    >
      <span
        className="c6"
        color="black"
        role="img"
        size={2}
      >
        <svg
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
      </span>
      some user
       (admin)
    </span>
    <span
      className="c5"
    >
      <span
        className="c6"
        color="black"
        role="img"
        size={2}
      >
        <svg
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.36 6.64a9 9 0 1 1-12.73 0"
          />
          <line
            x1="12"
            x2="12"
            y1="2"
            y2="12"
          />
        </svg>
      </span>
      <button
        className="c7"
        onClick={[Function]}
        type="button"
      >
        Logout
      </button>
    </span>
  </div>
</nav>
`;

exports[`AppBar With custom brand and login links 1`] = `
.c3 {
  color: black;
  cursor: pointer;
  color: black;
  font: sans-serif;
  font-size: 18px;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  -webkit-transition: 1s ease;
  transition: 1s ease;
}

.c3:hover,
.c3:focus,
.c3:active {
  background: none;
  color: black;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: calc(8px * 6);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  margin: calc(8px * 2) 1rem calc(8px * 2) 1rem;
}

.c4 > * {
  height: calc(8px * 6);
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: calc(8px * 3) 1rem calc(8px * 3) 0;
}

<nav
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      <a
        className="c3 c4"
        href="/home"
        onClick={[Function]}
      >
        some brand
      </a>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c5"
    >
      <a
        className="c3"
        href="/signin"
        onClick={[Function]}
      >
        Login
      </a>
    </span>
  </div>
</nav>
`;

exports[`AppBar With custom right component 1`] = `
.c3 {
  color: black;
  cursor: pointer;
  color: black;
  font: sans-serif;
  font-size: 18px;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  -webkit-transition: 1s ease;
  transition: 1s ease;
}

.c3:hover,
.c3:focus,
.c3:active {
  background: none;
  color: black;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: calc(8px * 6);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  margin: calc(8px * 2) 1rem calc(8px * 2) 1rem;
}

.c4 > * {
  height: calc(8px * 6);
}

<nav
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      <a
        className="c3 c4"
        href="/"
        onClick={[Function]}
      >
        some brand
      </a>
    </span>
  </div>
  <div>
    userName
  </div>
</nav>
`;

exports[`AppBar With nav links 1`] = `
.c3 {
  color: black;
  cursor: pointer;
  color: black;
  font: sans-serif;
  font-size: 18px;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  -webkit-transition: 1s ease;
  transition: 1s ease;
}

.c3:hover,
.c3:focus,
.c3:active {
  background: none;
  color: black;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: calc(8px * 6);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  margin: calc(8px * 2) 1rem calc(8px * 2) 1rem;
}

.c4 > * {
  height: calc(8px * 6);
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: calc(8px * 3) 1rem calc(8px * 3) 0;
}

<nav
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      <a
        className="c3 c4"
        href="/"
        onClick={[Function]}
      >
        some brand
      </a>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c5"
    >
      <a
        className="c3"
        href="/login"
        onClick={[Function]}
      >
        Login
      </a>
    </span>
  </div>
</nav>
`;
